Project/Code/Executor/Requests_To_Execute/Hello_WorldTEST2/log_file.txt
  File "C:\Github\Repositories\CodeDup\CodeDup\Project\Code\Executor\Requests_To_Execute\Hello_WorldTEST2\Hello_WorldTEST.py", line 1
    print "Hello World!"
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
